rgw: segment fault when shard id out of range

Fixes: http://tracker.ceph.com/issues/19732

Signed-off-by: redickwang <redickwang@tencent.com>
(cherry picked from commit ff4c40fc2e3c092d17a218ae6132de4e6034c8ee)